[Grease Pencil] Inconsistent "Only selected" GP layers in Dope Sheet #75676

Closed
opened 2020-04-13 12:03:15 +02:00 by Telmo Silva · 4 comments

System Information
Operating system: Linux-5.5.15-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits
Graphics card: Mesa DRI Intel(R) HD Graphics 620 (Kaby Lake GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.2.8

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-11 19:01, hash: 0a747cd4e3
Worked: (newest version of Blender that worked as expected)

Short description of error
Currently, if you have the "Lock Objects Modes" turned OFF and you have multiple GP objects, when you go from Draw mode in one object to another object, under some rules (which I didn't fully identify), both objects layers will appear in the Dope Sheet, even if the "Only Selection" toggle is on and with only one object selected.

Screenshot from 2020-04-13 12-01-44.png

Screenshot from 2020-04-13 12-01-52.png

**System Information** Operating system: Linux-5.5.15-200.fc31.x86_64-x86_64-with-fedora-31-Thirty_One 64 Bits Graphics card: Mesa DRI Intel(R) HD Graphics 620 (Kaby Lake GT2) Intel Open Source Technology Center 4.5 (Core Profile) Mesa 19.2.8 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-11 19:01, hash: `0a747cd4e3` Worked: (newest version of Blender that worked as expected) **Short description of error** Currently, if you have the "Lock Objects Modes" turned OFF and you have multiple GP objects, when you go from Draw mode in one object to another object, under some rules (which I didn't fully identify), both objects layers will appear in the Dope Sheet, even if the "Only Selection" toggle is on and with only one object selected. ![Screenshot from 2020-04-13 12-01-44.png](https://archive.blender.org/developer/F8468791/Screenshot_from_2020-04-13_12-01-44.png) ![Screenshot from 2020-04-13 12-01-52.png](https://archive.blender.org/developer/F8468790/Screenshot_from_2020-04-13_12-01-52.png)
Author

Added subscriber: @nottelmo-4

Added subscriber: @nottelmo-4

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2020-04-13 17:34:15 +02:00

This issue was referenced by ad317a5ffd

This issue was referenced by ad317a5ffdcfdfed9ef3f82ee82fd2dbd41e2bc9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75676
No description provided.