Fix T75676: Inconsistent "Only selected" GP layers in Dope Sheet

The selection was not checking all modes.