source/blender/editors/animation/anim_filter.c
@@ -1880,13 +1880,12 @@ static size_t animdata_filter_gpencil(bAnimContext *ac,
         }
       }
 
-      /* check selection and object type filters only for Object mode */
-      if (ob->mode == OB_MODE_OBJECT) {
-        if ((ads->filterflag & ADS_FILTER_ONLYSEL) && !((base->flag & BASE_SELECTED))) {
-          /* only selected should be shown */
-          continue;
-        }
+      /* check selection and object type filters */
+      if ((ads->filterflag & ADS_FILTER_ONLYSEL) && !((base->flag & BASE_SELECTED))) {
+        /* only selected should be shown */
+        continue;
       }
+
       /* check if object belongs to the filtering group if option to filter
        * objects by the grouped status is on
        * - used to ease the process of doing multiple-character choreographies
